=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 v1.023 - Under Development

=over

=item *

Made L<Krang::Publisher>->C<additional_content_block()> a lot easier
to use from the developer perspective.  Rather than handling the
result of the call, everything is now handled internally.  Overriding
C<publish()> to use C<additional_content_block> is no longer required.
Additionally, it's backwards-compatible with the old way of doing
things, so no need to make changes to your element libraries.  [Peter]


=item *

Fixed symlink bug that caused thumbnails to disappear from the UI
after a Krang instance was moved to a different location on the
filesystem.  [Peter]

=item *

Fixed a bug where deleting a newly-copied story threw an error in the
UI. [Peter]

=item *

Added platform support for Gentoo release 1.5.2, thanks to a patch 
from Fred Moyer (fmoyer@plusthree.com) [Perrin]

=back


=head2 v1.022 - August 6, 2004

=over

=item *

Added support for passing a list of classes to Krang::Story->find().
[Sam]

=item *

Added support for C<publish_category_per_page()> in the publish
process.  This functionality allows element library developers to
generate category template output customized for each page in a
story. [Peter]

=item *

Fixed a bug where Krang::ElementClass would complain about a missing
template for a sub-element that wasn't actually needed. [Sam]

=item *

Fixed a bug related to the internal tracking of assets in
L<Krang::Publisher>.  This finishes up a minor restructuring that
ensures C<krang_publish> publishes each story/media object only once
during a publish run. [Peter]

=item *

Fixed a bug in C<krang_publish>.  When publishing with the
C<--site_id> argument, all media objects under that site are now
published, not just those media objects linked to stories. [Peter]

=item *

Cleaned up the code handling the management of internal asset lists in